<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:padding="5dp"
    android:background="@drawable/rounded_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textview_choose_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/spinner_habits"
        android:layout_alignStart="@+id/spinner_habits"
        android:layout_marginStart="3dp"
        android:text="@string/textview_choose_template"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_habits"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="380dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_activity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="105dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textinputedittext_activity"
            android:layout_width="319dp"
            android:layout_height="match_parent"
            android:hint="@string/input_activity" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/textview_start_time"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/button_save"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:gravity="center"
        android:inputType="time"
        android:text="@string/textview_start_time"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="255dp"
        android:gravity="center"
        android:text="@string/textview_to" />

    <Button
        android:id="@+id/textview_end_time"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="275dp"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:gravity="center"
        android:inputType="time"
        android:text="@string/textview_end_time"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_description"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="165dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textinputedittext_description"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:hint="@string/input_description" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_save_as"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="125dp"
        android:text="@string/textview_save_as"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_save_as"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="100dp" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="27dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_delete_24dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_save"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="28dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="437dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_cancel"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_date"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="" />

</RelativeLayout>