<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="100dp"
    android:padding="5dp"
    android:background="@drawable/rounded_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textview_choose_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/textview_are_you_sure"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/button_save"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button_red"
        android:inputType="time"
        android:text="@string/button_yes"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_no"
        android:layout_width="90dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/button_save"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/rounded_button"
        android:inputType="time"
        android:text="@string/button_no"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</RelativeLayout>