<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollview_statistics"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@color/background_material_light">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_day_activity"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp"/>

            <TextView
                android:id="@+id/textview_date_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22dp"/>

        </LinearLayout>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart_average_daily_activity"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center">

        </com.github.mikephil.charting.charts.PieChart>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/textview_activity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_activity_label"
                android:textSize="18dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/textview_activity_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_activity_hours"
                android:textSize="18dp"
                android:layout_marginLeft="5dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_habit_progress"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp"
            android:layout_marginTop="15dp"/>

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/horizontalBarChart_habit_progress"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp">
        </com.github.mikephil.charting.charts.HorizontalBarChart>

        <TextView
            android:id="@+id/textview_habit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_habit_label"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_enforcement_quote"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="22dp"
            android:layout_marginTop="15dp"/>

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/radarchart_enforcement_quotes"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">
        </com.github.mikephil.charting.charts.RadarChart>

    </LinearLayout>
</ScrollView>